--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,20 +9,22 @@
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
     <link rel="stylesheet" href="assets/css/custom.css">
+    <script src="https://kit.fontawesome.com/54ab5c1dbd.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <div id="contenido">
-        <div class="container">
-
-            <h1><img id='logo' src="assets/img/logo.png" alt="">Local Storage</h1>
+        <div class="container">  
+            <div class="header">          
+                <h1><img id='logo' src="https://i.postimg.cc/ZRS1LVh8/todo.png" alt="">Lista de ideas</h1>
+            </div>
             <div class="row">
                 <div class="six columns">
-                    <label for="tweet"> <img src="assets/img/idea.png" alt=""> mis ideas</label>
+                    <label for="tweet"> <i class="fas fa-lightbulb"></i>mis ideas</label>
                     <form action="#" id="formulario">
                             <label for="tweet"></label>
-                            <textarea placeholder="¿Que estas pensando ?"id="tweet" class="u-full-width"></textarea>
-                            <input type="submit" class="button u-full-width button-primary" value="Agregar">
+                            <textarea placeholder="¿Que estas pensando ?"id="tweet" class="u-full-width shadow"></textarea>
+                            <input type="submit" class="button u-full-width button-primary shadow" value="Agregar">
                     </form>
                 </div>
                 <div class="six columns">
