fix css and bugs

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <div id="contenido">
         <div class="container">  
             <div class="header">          
-                <h1><img id='logo' src="https://i.postimg.cc/ZRS1LVh8/todo.png" alt="">Lista de ideas</h1>
+                <img id='logo' src="https://i.postimg.cc/ZRS1LVh8/todo.png" alt="">
             </div>
+            <h1 class="title">Lista de ideas</h1>
             <div class="row">
                 <div class="six columns">
                     <label for="tweet"> <i class="fas fa-lightbulb"></i>mis ideas</label>
