--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,11 +12,12 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <script src="https://kit.fontawesome.com/54ab5c1dbd.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
     <div id="contenido">
-        <div class="container">  
-            <div class="header">          
+        <div class="container">
+            <div class="header">
                 <img id='logo' src="https://i.postimg.cc/ZRS1LVh8/todo.png" alt="">
             </div>
             <h1 class="title">Lista de ideas</h1>
@@ -23,9 +25,9 @@
                 <div class="six columns">
                     <label for="tweet"> <i class="fas fa-lightbulb"></i>mis ideas</label>
                     <form action="#" id="formulario">
-                            <label for="tweet"></label>
-                            <textarea placeholder="¿Que estas pensando ?"id="tweet" class="u-full-width shadow"></textarea>
-                            <input type="submit" class="button u-full-width button-primary shadow" value="Agregar">
+                        <label for="tweet"></label>
+                        <textarea placeholder="¿Que estas pensando ?" id="tweet" class="u-full-width shadow"></textarea>
+                        <input type="submit" class="button u-full-width button-primary shadow" value="Agregar">
                     </form>
                 </div>
                 <div class="six columns">
@@ -35,8 +37,10 @@
             </div>
 
         </div>
-    </div> <!--#contenido-->
+    </div>
+    <!--#contenido-->
 
     <script src="assets/js/app.js"></script>
 </body>
+
 </html>
