--- a/index.html
+++ b/index.html
@@ -5,12 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Guardar ideas localStorage</title>
+    <!--color de la barra nav mobil-->
+    <meta name="theme-color" content="#F8F8FF">
+    <!--mobile friendly-->
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!---SEO-->
+    <link rel="canonical" href="https://mrbanano.github.io/To-do-list-js-LocalStorage/">
+    <meta name="author" content="Alvaro Castillo Carreño">
+    <meta name="description" content="Es una aplicacion para guardar recordatiorio, tareas o pesamientos">
+    <meta name="keywords"
+        content="Alvaro,Castillo,Carreño,ingenerio,sistemas,html,css,js,to-do-list,puebla,mexico,task,tareas,pensamientos">
+    <!---Twitter-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@666alvaro">
+    <meta name="twitter:creater" content="@666alvaro">
+    <meta name="twitter:title" content="Alvaro Castillo Cv">
+    <meta name="twitter:description" content="Es una aplicacion para guardar recordatiorio, tareas o pesamientos">
+    <meta name="twitter:image" content="https://i.postimg.cc/ZRS1LVh8/todo.png">
+    <!----facebook-->
+    <meta name="og:locale" content="es_MX">
+    <meta name="og:type" content="website">
+    <meta name="og:title" content="Guarda tus ideas">
+    <meta name="og:description" content="Es una aplicacion para guardar recordatiorio, tareas o pesamientos">
+    <meta name="og:url" content="https://mrbanano.github.io/To-do-list-js-LocalStorage/">
+    <meta name="og:site_name" content="https://mrbanano.github.io/To-do-list-js-LocalStorage/">
+    <meta name="og:image" content="https://i.postimg.cc/ZRS1LVh8/todo.png">
+     <!----style-->
     <link rel="icon" type="image/png" href="assets/img/bombilla.png">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     <script src="https://kit.fontawesome.com/54ab5c1dbd.js" crossorigin="anonymous"></script>
+     <!----PWA-->
+     <!----Title-->
+    <title>Guardar ideas</title>
 </head>
 
 <body>
@@ -18,7 +49,7 @@
     <div id="contenido">
         <div class="container">
             <div class="header">
-                <img id='logo' src="https://i.postimg.cc/ZRS1LVh8/todo.png" alt="">
+                <img id='logo' src="https://i.postimg.cc/ZRS1LVh8/todo.png" alt="mujer-guardando-notas">
             </div>
             <h1 class="title">Lista de ideas</h1>
             <div class="row">
