nav bar color mobile

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--color de la barra nav mobil-->
-    <meta name="theme-color" content="#F8F8FF">
+    <meta name="theme-color" content="#606e8c">
     <!--mobile friendly-->
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
