dark mode  3/4 ready i need optimization the code

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
     <div class="container">
         <div class="mode">
-            <button class="switch" id="switch">
+            <button class="switch active" id="switch">
                 <span><i class="fas fa-sun"></i></span>
                 <span><i class="fas fa-moon"></i></span>
             </button>
@@ -64,7 +64,7 @@
                 <form class="tweet-form" id="formulario">
                     <label for="tweet"></label>
                     <textarea placeholder="¿Que estas pensando ?" id="tweet" class="u-full-width shadow"></textarea>
-                    <input type="submit" class="bnt shadow" value="Agregar">
+                    <input id="btn" type="submit" class="bnt shadow" value="Agregar">
                 </form>
             </div>
             <div class="six columns">
